--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
-# INFORMAÇÕES PARA CONEXÃO COM O BANCO DE DADOS MYSQL
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.driver-class-name=
+# datasource PostgreSQL
+spring.datasource.url = jdbc:postgresql://localhost:5432/terceiro_periodo
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
-# MANIPULANDO ESTRUTURAS (TABELAS)
+# jpa
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql:true
-
-
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 # clients
-feign.client.config.messageSlipClient.connectTimeout=5000
-feign.client.config.messageSlipClient.readTimeout=5000
+#feign.client.config.messageSlipClient.connectTimeout=5000
+#feign.client.config.messageSlipClient.readTimeout=5000
